syntax = "proto2";

package NCloud.NProto;

option go_package = "a.yandex-team.ru/cloud/storage/core/protos";

////////////////////////////////////////////////////////////////////////////////

message TCertificate
{
    optional string CertFile = 1;
    optional string CertPrivateKeyFile = 2;
}
